Fix background not showing on hero and steps section

--- a/src/components/heroSection/heroSection.css
+++ b/src/components/heroSection/heroSection.css
@@ -6,7 +6,7 @@
   align-items: center;
   gap: 4rem;
 
-  background-image: url("assets/images/pattern-light-bg.svg");
+  background-image: url("/assets/images/pattern-light-bg.svg");
 
   header {
     width: 100%;
