--- a/src/components/stepsSection/stepsSection.css
+++ b/src/components/stepsSection/stepsSection.css
@@ -8,7 +8,7 @@
     flex-direction: column;
     gap: 2rem;
     padding: 4rem 1rem;
-    background-image: url("assets/images/pattern-light-bg.svg");
+    background-image: url("/assets/images/pattern-light-bg.svg");
     background-color: #faf5f3;
     border-radius: 12px;
 
